# Hindsight

./: LICENSE  README.md  design.md  pyproject.toml  requirements-dev.txt  requirements.md  requirements.txt  setup.py
hindsight/: __init__.py  __main__.py  cache.py  config.py  models.py
hindsight/analyzer/: hindsight_analyzer.py
hindsight/cli/: interface.py
hindsight/explainer/: ai_explainer.py
hindsight/git_parser/: analyzer.py
hindsight/intent_extractor/: parser.py
tests/: conftest.py
tests/property_based/: test_properties.py
tests/unit/: test_analyzer.py  test_cache.py  test_cli.py  test_config.py  test_explainer.py  test_git_analyzer.py  test_intent_extractor.py  test_models.py
